--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@google/genai": "latest",
+    "@google/generative-ai": "^0.21.0",
     "react-router-dom": "6.22.3",
     "@remix-run/router": "1.15.3",
     "@supabase/supabase-js": "2.39.3"
